# amerinth

./: .env.example  Cargo.toml  justfile  readme.md
examples/: main.rs
src/: api.rs  client.rs  helpers.rs  lib.rs
src/api/: misc.rs  mod.rs  tags.rs  users.rs
src/api/misc/: forge.rs  mod.rs  statistics.rs
src/api/projects/: data.rs  project_type.rs
src/api/tags/: donation.rs  license.rs  loader.rs  macros.rs  report.rs
src/api/users/: current.rs  data.rs  get.rs
src/api/users/data/: badges.rs  payout.rs
src/auth/: mod.rs  user_agent.rs
src/client/: auth.rs  http.rs  mod.rs  user_agent.rs
src/helpers/: debug_fmt.rs  deserialize_other.rs  endpoint.rs  endpoint_vec.rs  enum_vec.rs  other_enum.rs  vec_enum.rs
