[package]
name = "amerinth"
version = "2.0.0"
edition = "2024"

[dependencies]
bon = "3.6.4"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"

[dev-dependencies]
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
