[package]
name = "amerinth"
publish = false
version = "2.0.0"
edition = "2024"

[features]
default = []

# modules
all = ["projects", "versions", "version-files", "users", "notifications", "threads", "teams", "tags", "misc"]

projects = []
versions = []
version-files = []
users = []
notifications = []
threads = []
teams = []
tags = []
misc = []

[dependencies]
bon = "3.6.4"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde", "std"] }
http = "1.3.1"
pastey = "0.1.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
rustify = "0.6.1"
rustify_derive = "0.5.4"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
